--- a/Web/style.css
+++ b/Web/style.css
@@ -1,7 +1,3 @@
-/* Reset default max-width to allow full-width sections */
-#root {
-  max-width: 100%;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
